# RAG

./: .gitignore  main.py  pyproject.toml
app/api/: chat.py  router.py
app/api/v1/: chat.py  collections.py  documents.py  health.py
app/core/: config  config.py  database.py
app/models/: __init__.py  base.py  chat.py  collection.py  document.py
app/schemas/: chat.py  collection.py  common.py  document.py
app/services/: chain_rag.py  chat.py  ingestion.py  mistral.py  qdrant.py  query_rewriter.py  retriever.py  sparse.py  vision.py
docker/: Dockerfile
scripts/: download_dataset.py  eval_results.json  evaluate.py
scripts/eval_data/: manifest.json
